<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2020, Red Hat Inc. All rights reserved.

    Licensed under the Apache License, Version 2.0 (the "License");
    You may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.graalvm.tests.integration</groupId>
    <artifactId>parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Native image integration TS</name>

    <properties>
        <!-- Quarkus apps -->
        <!-- Note that the TS switches Quarkus version at test run,
             see Commands.java, QUARKUS_VERSION -->
        <global.quarkus.version>2.13.9.Final</global.quarkus.version>

        <!-- Helidon quickstart -->
        <version.helidon>2.2.2</version.helidon>

        <!-- General TS deps -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.version>3.14.0</maven.compiler.version>
        <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
        <maven.surefire.version>2.22.2</maven.surefire.version>
        <maven.failsafe.version>2.22.2</maven.failsafe.version>
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
        <maven.build.helper.version>3.6.0</maven.build.helper.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <junit.jupiter.version>5.10.2</junit.jupiter.version>
        <resteasy.version>4.3.0.Final</resteasy.version>
        <commons.lang.version>3.14.0</commons.lang.version>
        <jboss-logging.version>3.5.3.Final</jboss-logging.version>
        <log4j.version>2.23.1</log4j.version>
        <org.json.version>20240303</org.json.version>

        <!-- Test to be executed by default (all of them except perfcheck) -->
        <includeTags>runtimes,reproducers</includeTags>
    </properties>

    <profiles>
        <profile>
            <id>testsuite</id>
            <modules>
                <module>testsuite</module>
            </modules>
            <properties>
                <excludeTags>builder-image</excludeTags>
            </properties>
        </profile>
        <profile>
            <id>testsuite-builder-image</id>
            <modules>
                <module>testsuite</module>
            </modules>
            <properties>
                <excludeTags>all</excludeTags>
                <includeTags>builder-image</includeTags>
            </properties>
        </profile>
        <profile>
            <id>ide</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <excludeTags>none</excludeTags>
            </properties>
            <modules>
                <module>apps/calendars</module>
                <module>apps/debug-symbols-smoke</module>
                <module>apps/helidon-quickstart-se</module>
                <module>apps/imageio</module>
                <module>apps/jdkreflections</module>
                <module>apps/jfr-native-image-performance</module>
                <module>apps/quarkus-full-microprofile</module>
                <module>apps/quarkus-json</module>
                <module>apps/quarkus-mp-orm-dbs-awt</module>
                <module>apps/quarkus-spöklik-encoding</module>
                <module>apps/quarkus-vertx</module>
                <module>apps/random-numbers</module>
                <module>apps/recordannotations</module>
                <module>apps/reslocations</module>
                <module>apps/timezones</module>
                <module>apps/versions</module>
                <module>apps/monitor-field-offset</module>
                <module>apps/for-serialization</module>
                <module>testsuite</module>
            </modules>
        </profile>
    </profiles>
</project>
